Display data of a product in a details panel

--- a/databinding/webapp/view/MainView.view.xml
+++ b/databinding/webapp/view/MainView.view.xml
@@ -57,6 +57,8 @@
                 <List items="{products>/Products}">
                     <items>
                         <ObjectListItem 
+                            type="Active"
+                            press=".onItemSelected"
                             title="{products>ProductName}"
                             number="{
                                 parts: [ 'products>UnitPrice', 'user>/currencyCode' ],
@@ -78,8 +80,30 @@
                         </ObjectListItem>
                     </items>
                 </List>
-
             </Panel>
+
+            <Panel id="productDetailsPanel" headerText="{i18n>panelProductDetailsHeaderText}" class="sapUiResponsiveMargin" width="auto">
+                <form:SimpleForm editable="true" layout="ColumnLayout">
+                    <Label text="{i18n>ProductID}" />
+                    <Input value="{products>ProductID}" />
+
+                    <Label text="{i18n>ProductName}" />
+                    <Input value="{products>ProductName}" />
+
+                    <Label text="{i18n>QuantityPerUnit}" />
+                    <Input value="{products>QuantityPerUnit}" />
+
+                    <Label text="{i18n>UnitPrice}" />
+                    <Input value="{products>UnitPrice}" />
+
+                    <Label text="{i18n>UnitsInStock}" />
+                    <Input value="{products>UnitsInStock}" />
+
+                    <Label text="{i18n>Discontinued}" />
+                    <Input value="{products>Discontinued}" />
+                </form:SimpleForm>
+            </Panel>
+
         </content>
     </Page>
 </mvc:View>
